Initial commit - E-commerce site

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             Organic.<br />
             Delivered.
         </h1>
-        <button class="cta-btn">GET IT</button>
+        <a href="#categories">
+            <button class="cta-btn">GET IT</button>
+        </a>
         </div>
     </section>
 
